# focusgroup

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl
.devcontainer/: Dockerfile  docker-compose.yml
.devcontainer/scripts/: post-create-project.sh  post-start-common.sh  post-start-project.sh
configs/examples/: cli-mode-agents.toml  discussion-mode.toml  docs-feedback.toml  memex-review.toml  mixed-agents-test.toml  quick-check.toml
docs/: cli-path-lookup.html  configuration.html  configuration.md  exploration.html  exploration.md  graph.html  graph.json  index.html  json-formats.html  modes.html  modes.md  providers.html  providers.md  quick-start.html  search-index.json  structured-feedback.html
docs/best-practices/: ai-slop-antipatterns.html
docs/devops/: voidlabs-cicd-automation.html  voidlabs-provisioning-workflow.html
docs/infrastructure/: ansible-inventory-split-guide.html  common-patterns.html  garage-s3-object-storage.html  hyperion-proxmox-boot-failure-postmortem.html  memex-knowledge-base.html  omarchy-vm-setup-on-proxmox-with-gpu-passthrough.html  proxmox-gpu-passthrough-on-amd-kernel-68-iommu-issue.html  proxmox-subscription-nag-removal.html  proxmox-vm-filesystem-recovery-with-fsck.html  virtiofs-limitations-and-troubleshooting.html  (+5 more)
kb/: cli-path-lookup.md  configuration.md  exploration.md  json-formats.md  modes.md  providers.md  quick-start.md  structured-feedback.md
tests/: __init__.py  conftest.py  test_agents.py  test_cli.py  test_config.py  test_costs.py  test_modes.py  test_output.py  test_storage.py
(+261 files in other folders)
