[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "focusgroup"
version = "0.1.0"
description = "Gather feedback from multiple LLM agents on tools designed for agent use"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Chris" }]
keywords = ["llm", "agents", "feedback", "cli", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.5.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
focusgroup = "focusgroup.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/focusgroup"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
